compilation fixes.